# magic-args-rs

./: Cargo.toml  LICENSE  README.md
magic-args/: Cargo.toml
magic-args-derive/: Cargo.toml
magic-args-derive/src/: lib.rs
magic-args/.cargo/: config.toml
magic-args/src/: lib.rs
